--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -57,4 +57,8 @@ main .left .review {
 
 main .right{
   background-color: #222121;
+  color: white;
+  padding : 2rem;
+  font-size: 1.2rem;
+  overflow: auto;
 }
